RESOLVED FIXED194489
[LFC] Fix spelling error.
https://bugs.webkit.org/show_bug.cgi?id=194489
Summary [LFC] Fix spelling error.
alan
Reported 2019-02-10 21:18:21 PST
instrinsic -> intrinsic
Attachments
Patch (21.68 KB, patch)
2019-02-10 21:25 PST, alan
no flags
alan
Comment 1 2019-02-10 21:25:33 PST
WebKit Commit Bot
Comment 2 2019-02-10 22:17:59 PST
Comment on attachment 361656 [details] Patch Clearing flags on attachment: 361656 Committed r241257: <https://trac.webkit.org/changeset/241257>
WebKit Commit Bot
Comment 3 2019-02-10 22:18:00 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-02-10 22:18:28 PST
Note You need to log in before you can comment on or make changes to this bug.